--- a/task03_0606/Views/Products/Index.cshtml
+++ b/task03_0606/Views/Products/Index.cshtml
@@ -14,24 +14,23 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-<h2 style="color:green " ><b>美食分類</b></h2>
 
 
 <div class="container" style="background-color:#FFA07A">
 
 <h2>美食分類</h2>
 
-<div class="container">
 
-      
-   
-   
-     <div class="card-group"> 
-         <img src="http://fivethin.gs/truck.svg" width="20%" class="truck" alt=""><img src="hills-background.svg" class="hills" width="100%" alt="">
+    <div class="container">
+
+
+  <img src="hills-background.svg" class="hills" width="100%" alt="">
     <img src="http://fivethin.gs/hills-background.svg" class="hills" width="100%" alt="">
+     <div class="card-group">
 
-        @foreach(task03_0606.Models.FoodCategories db in Model)
-       {
+
+        @foreach (task03_0606.Models.FoodCategories db in Model)
+        {
            <div class="card" style="width:200px">
             <img class="card-img-top" src="~/photo/productsindex/@db.categoryPicture" alt="Card image cap">
             <div class="card-body">
@@ -39,13 +38,14 @@
                 <p class="card-text">@db.Description</p>
                 <div>
                     <a href="~/Products/@db.categoryURL" class="btn btn-primary">進入挑選</a>
-                    
+
                 </div>
 
             </div>
-         
+               
         </div>
        }
+        
     @*<div class="card-group">
         <div class="card" style="width:200px">
             <img class="card-img-top" src="~/photo/productsindex/d10_resized.jpg" alt="Card image cap">
