--- a/task03_0606/Views/Shared/_CartList.cshtml
+++ b/task03_0606/Views/Shared/_CartList.cshtml
@@ -40,7 +40,7 @@
                 </a>
 
                 <div class="dropdown-message">
-                    <p id="cartItemMessage">@string.Format("數量：{0} &nbsp 單價：{1}", cartItem.quantity, cartItem.price)</p>
+                    <p id="cartItemMessage">@string.Format("數量：{0},單價：{1}", cartItem.quantity, cartItem.price)</p>
                 </div>
             </div>
             }
