--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                                 <a href="~/Products/Riceproducts"><i class="fa fa-fw fa-cutlery"></i>米飯類</a>
                             </li>
                             <li>
-                                <a href="~/Products/Riceproducts"><i class="fa fa-fw fa-cutlery"></i>速食類</a>
+                                <a href="~/Products/Fastfoodproducts"><i class="fa fa-fw fa-cutlery"></i>速食類</a>
                             </li>
                         </ul>
                     </li>
@@ -96,7 +96,7 @@
                     </li>
                     @*商家專用-產品列表*@
                     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="產品列表">
-                        <a class="nav-link" href="~/#/Product?userID=1">
+                        <a class="nav-link" href="~/Products/ManagerIndex">
                             <i class="fa fa-fw fa-sticky-note"></i>
                             <span class="nav-link-text">產品列表</span>
                         </a>
