--- a/task03_0606/Views/Products/storeAIndex.cshtml
+++ b/task03_0606/Views/Products/storeAIndex.cshtml
@@ -35,7 +35,7 @@
                                 <th style="width: 80px;" class="list-unstyled" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="activate to sort column descending" aria-sort="ascending"></th>
                                 <th style="width: 50px;" class="list-unstyled" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="商品名稱: activate to sort column descending" aria-sort="ascending">商品名稱</th>
                                 <th style="width: 50px;" class="list-unstyled" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="商品圖片: activate to sort column descending" aria-sort="ascending">商品圖片</th>
-                                <th style="width: 50px;" class="list-unstyled" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="銷售數量: activate to sort column descending" aria-sort="ascending">銷售數量</th>
+                                @*<th style="width: 50px;" class="list-unstyled" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="銷售數量: activate to sort column descending" aria-sort="ascending">銷售數量</th>*@
                                 <th style="width: 50px;" class="list-unstyled" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="商品代號: activate to sort column descending" aria-sort="ascending">商品代號</th>
                                 <th style="width: 50px;" class="list-unstyled" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="商品介紹: activate to sort column descending" aria-sort="ascending">商品介紹</th>
                                 <th style="width: 50px;" class="list-unstyled" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="商品價錢: activate to sort column descending" aria-sort="ascending">商品價錢</th>
@@ -52,8 +52,8 @@
                                     <td>@Html.DisplayFor(modelItem => item.productID)</td>
                                     @*<td>@Html.DisplayFor(modelItem => item.picture)</td>*@
                                     <td>
-                                        @Html.ActionLink("Edit", "Edit", new { productID = item.productID }) |
-                                        @Html.ActionLink("Delete", "Delete", new { productID = item.productID })
+                                        @Html.ActionLink("Edit", "Edit", new { productID = item.productID }) @*|
+                                        @Html.ActionLink("Delete", "Delete", new { productID = item.productID })*@
                                     </td>
                                     <td>@Html.DisplayFor(modelItem => item.productName)</td>
                                     <td class="ProfileImg">
@@ -69,7 +69,7 @@
                                                 }
                                             </a>*@
                                     </td>
-                                    <td>@Html.DisplayFor(modelItem => item.salesVolume)</td>
+                                    @*<td>@Html.DisplayFor(modelItem => item.salesVolume)</td>*@
                                     <td>@Html.DisplayFor(modelItem => item.storeProductId)</td>
                                     <td id="productDescription" name="productDescription" class="alert-danger" width="200">
                                         @Html.DisplayFor(modelItem => item.productDescription)
