--- a/task03_0606/Views/Products/Index.cshtml
+++ b/task03_0606/Views/Products/Index.cshtml
@@ -18,7 +18,7 @@
 
 <div class="container" style="background-color:#FFA07A">
 
-<h2>美食分類</h2>
+<h2><b>美食分類</b></h2>
 
 
     <div class="container">
