--- a/task03_0606/Views/Products/Create.cshtml
+++ b/task03_0606/Views/Products/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model task03_0606.Models.Product
 @{
     ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_LayoutManagerIndex.cshtml";
 }
 
 
