--- a/task03_0606/Views/Products/Delete.cshtml
+++ b/task03_0606/Views/Products/Delete.cshtml
@@ -1,6 +1,7 @@
 ﻿@model task03_0606.Models.Product
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_LayoutManagerIndex.cshtml";
 }
 
 <h2>刪除商品</h2>
