--- a/task03_0606/Views/Products/Edit.cshtml
+++ b/task03_0606/Views/Products/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model task03_0606.Models.Product
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutManagerIndex.cshtml";
 }
 
 @using (Html.BeginForm())
