--- a/task03_0606/Views/Shared/_LayoutManagerIndex.cshtml
+++ b/task03_0606/Views/Shared/_LayoutManagerIndex.cshtml
@@ -259,7 +259,7 @@
                 <li class="nav-item">
 
                     <a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">
-                        店名XXX  您好 <i class="fa fa-fw fa-sign-out"></i>登出
+                        店名麥當勞 您好 <i class="fa fa-fw fa-sign-out"></i>登出
 
                     </a>
                 </li>
