--- a/task03_0606/Views/Products/ManagerIndex.cshtml
+++ b/task03_0606/Views/Products/ManagerIndex.cshtml
@@ -26,7 +26,7 @@
                     <label>
                         店家名稱
                         <select onChange="MM_o(this)" style="background:#3399FF; color:#ffffff" name="dataTable_length" aria-controls="dataTable" class="form-control form-control-sm">
-                            <option value="~/Products/ManagerIndex"selected>所有產品</option>
+                            <option value=""selected>所有產品</option>
                             <option value='~/Products/storeAIndex'>麥當勞</option>
                             <option value="~/Products/storeBIndex">花月嵐拉麵</option>
                             <option value="八坂丼飯">八坂丼飯</option>
